--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
+        "php": ">=7.4|^8.0",
         "ext-dom": "*",
         "ext-json": "*",
         "ext-libxml": "*",
